--- a/src/assets/styles/cmps/board/task/_date-preview.scss
+++ b/src/assets/styles/cmps/board/task/_date-preview.scss
@@ -2,10 +2,6 @@
     padding: 2px;
 
     p {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
         white-space: nowrap;
         overflow-x: hidden;
         text-overflow: ellipsis;
